assets/scss/pages/home.scss
.home {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  padding-top: 8rem;

  @include screen('small') {
    padding-top: 6rem;
  }

  &__container {
    display: inherit;
    align-items: inherit;
    flex-direction: inherit;
    width: 100%;
  }

  &__title {
    font-size: 1.4rem;
    font-family: 'Inter';
    font-weight: 500;
    background: rgba(#c36f8e, 0.1);
    padding: 10px 16px;
    border-radius: 50px;
    color: #c36f8e;
    border: 1px solid #c36f8e;
    transition: transform 1.2s $ease-out-expo;

    &:hover {
      transform: translateY(-5%);
    }

    @include screen('small') {
      font-size: 1.15rem;
      padding: 10px 12px;
    }
  }

  &__cards {
    --min-size: 400px;
    --size: 27vw;
    position: relative;
    width: var(--size);
    height: var(--size);
    min-width: var(--min-size);
    min-height: var(--min-size);
    margin-top: 15rem;
    cursor: grab;
    --scale: 0;

    @include screen('small') {
      --min-size: unset;
      --size: 74vw;
      margin-top: 12rem;
    }

    > * {
      // $trans-duration: 360ms;
      $trans-duration: 500ms;
      position: absolute;
      width: 100%;
      height: 100%;
      border-radius: $radius-default;
      transform: rotate(var(--rotation)) scale(var(--scale));
      transition: transform $trans-duration $ease-out-expo var(--delay);
      $colors: #739fb7, #d6aeb6, #a4ccd6, #8cc6d4, #8ac6c7, #5ab6c4;
      $delay: calc($trans-duration/5);
      $rotation: 20deg;

      @for $i from 1 through 6 {
        &:nth-child(#{$i}) {
          --delay: calc(#{$delay} * #{$i});
          --rotation: #{$rotation};
          background-color: nth($colors, $i);
        }
        $rotation: $rotation - 4;
      }

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center;
        pointer-events: none;
        border-radius: inherit;
        -khtml-user-select: none;
        -o-user-select: none;
        -moz-user-select: none;
        -webkit-user-select: none;
        user-select: none;
      }
    }
  }
}

